# lp-history-reconstructor

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  vercel.json
.cursor/rules/: project.mdc
.github/workflows/: ci.yml  refresh.yml
config/: npm.yaml  pipelines.yaml  pools.yaml
dashboard/: README.md  evidence.config.yaml  package-lock.json  package.json  vercel.json
dashboard/pages/: index.md
dashboard/sources/lp/: connection.yaml  lp_marts.duckdb  pnl_by_range_width.sql  pool_activity.sql  position_pnl.sql
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/marts/: mart_pnl_by_range_width.sql  mart_pool_activity.sql  mart_position_pnl.sql  schema.yml
dbt/models/staging/: schema.yml  stg_nft_positions.sql  stg_npm_events.sql  stg_pool_events.sql
schemas/: raw_v2_events.json
src/lp_history/: __init__.py  build_warehouse.py  export_snapshot.py  run.py  settings.py
src/lp_history/analytics/: __init__.py  positions_snapshot.py  price.py
src/lp_history/index/: __init__.py  abi.py  backfill.py  decode.py  npm_abi.py  npm_backfill.py  v3_abi.py
src/lp_history/load/: __init__.py  checkpoint.py  duckdb_loader.py  parquet.py
src/lp_history/rpc/: __init__.py  client.py
src/lp_history/state/: __init__.py  fold.py  npm_wallets.py  v3_positions.py
src/lp_history/verify/: __init__.py  check.py  npm_check.py  v3_check.py
tests/: conftest.py  test_backfill.py  test_decode.py  test_npm.py  test_price.py
tests/fixtures/: npm_logs.json  sync_logs.json  v3_mint_logs.json
