[project]
name = "lp-history-reconstructor"
version = "0.1.0"
description = "Uniswap V2 LP history reconstructor: event backfill, state fold, on-chain verification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.9",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.4",
    "httpx>=0.28.1",
    "pandas>=2.2.0",
    "pandera>=0.22.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "web3>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "lp_history"
module-root = "src"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "respx>=0.22.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
